#51: swot img fallback, fix input overflow

--- a/src/components/SwotCard/style.css
+++ b/src/components/SwotCard/style.css
@@ -6,6 +6,27 @@
   width: 100%;
 }
 
+input[type=text]:not(.browser-default) {
+  height: 2rem;
+}
+
+input:focus {
+  box-shadow: 0 1px 0 0 rgb(89, 156, 4) !important;
+  border-bottom: 1px solid rgb(89, 156, 4) !important;;
+}
+
+input[type=text]:not(.browser-default):focus:not([readonly]) {
+  height: 2rem;
+}
+
+input[type=text]:not(.browser-default):focus:not([readonly])+label {
+  color: rgb(89, 156, 4);
+}
+
+input[type=text]:not(.browser-default).validate+label {
+  top: -5px;
+}
+
 .swot-card {
   width: 100%;
   height: 370px;
